fixed checkstyle warnings for plugins, added missing license header